fix: (shop) product card max width set and left aligned

--- a/src/ALT/ProductCartd1.css
+++ b/src/ALT/ProductCartd1.css
@@ -4,7 +4,7 @@
   text-decoration: none !important;
   color: inherit;
   display: block;
-  /* max-width: 280px; */
+  max-width: 280px;
   margin-bottom: 0.1rem;
 }
 
